--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,13 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:gravity="center"
-    android:orientation="vertical" >
+<LinearLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent"
+	android:gravity="center"
+	android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello" />
+	<TextView
+		android:id="@+id/winner"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="A solution by Narahari family and Friends"
+		android:textSize="20sp"/>
+
+	<HorizontalScrollView
+		android:layout_height="wrap_content"
+		android:layout_width="wrap_content">
+
+		<TextView
+			android:id="@+id/roundsView"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text=""
+			android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+	</HorizontalScrollView>
+
+	<EditText
+		android:id="@+id/editText"
+		android:layout_height="42dp"
+		android:layout_width="82dp"
+		
+		android:background="#C6D927"
+		android:ellipsize="middle"
+		android:textColor="#EF2316"
+		android:elevation="73dp"
+		android:textAppearance="?android:attr/textAppearanceLarge"/>
+
+	<Button
+		android:layout_height="wrap_content"
+		android:layout_width="wrap_content"
+		android:text="Start"
+		android:onClick="onStartClick"
+		android:background="#F0F0EC"/>
 
 </LinearLayout>
+
